[tool.poetry]
name = "arkitekt"
version = "0.1.0"
description = ""
authors = ["jhnnsrs <jhnnsrs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = ">=3,<4"
channels = "^3.0.5"
channels-redis = "^4.0.0"
balder = { version = "0.1.30", extras = ["subscription"] }
omegaconf = "^2.2.3"
rich = "^12.6.0"
django-cors-headers = "^3.13.0"
django-taggit = "^3.0.0"
django-probes = "^1.7.0"
django-health-check = "^3.17.0"
lok = "^0.2.0"
django-guardian = "^2.4.0"
psycopg2 = "^2.9.4"
pydantic = "^1.10.2"
aiormq = "^6.4.2"
amqp = "^5.1.1"
kombu = "^5.2.4"
pillow = "^9.2.0"
inflection = "^0.5.1"
ujson = "^5.5.0"
whitenoise = "^6.4.0"
pika = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
